--- a/client/app/addApps/addApps.html
+++ b/client/app/addApps/addApps.html
@@ -22,8 +22,8 @@
       </div>
       <div ng-controller="UploadController">
           <label>Cover Letter Upload</label>
-          <div ngf-drop ngf-select ng-model="files" class="drop-box"
-              ngf-drag-over-class="'dragover'" ngf-allow-dir="true" ngf-pattern="'.doc,.docx,.pdf/*'"
+          <div ngf-drop ngf-select ng-model="file" class="drop-box"
+              ngf-drag-over-class="'dragover'" ngf-allow-dir="true"
               >Drop file here to upload</div>
       </div>
       <div>
