--- a/client/app/login/signup.html
+++ b/client/app/login/signup.html
@@ -1,48 +1,49 @@
-<div class="col-md-8 col-md-offset-2">
+<div id = "signUpView">
 
   <!--Page Title -->
   <div class="page-header"><h1>Signup</h1></div>
 
-  <!-- Sign Up Form Input Fields -->
-  <form name="signUpForm" ng-submit="signup(signUpForm.$valid)" novalidate>
+  <div class ="col-md-offset-2 col-md-10">
 
-    <!-- USERNAME: Required field, has to be longer than 6 char, less than 20 -->
-    <div class="form-group" ng-class="{ 'has-error' : signUpForm.username.$invalid && !signUpForm.username.$pristine }">
+    <!-- Sign Up Form Input Fields -->
+    <form name="signUpForm" ng-submit="signup(signUpForm.$valid)" novalidate>
 
-      <label>Username<img height='10px' width='10px' src='../Assets/required.png' /></label>
-      <input type="text" name="username" class="form-control" ng-model="user.username" ng-minlength="6" ng-maxlength="20">
+      <!-- USERNAME: Required field, has to be longer than 6 char, less than 20 -->
+      <div class="form-group" ng-class="{ 'has-error' : signUpForm.username.$invalid && !signUpForm.username.$pristine }">
 
-      <!-- Invalid input error message -->
-      <p ng-show="signUpForm.username.$error.minlength" class="help-block">Username is too short.</p>
-      <p ng-show="signUpForm.username.$error.maxlength" class="help-block">Username is too long.</p>
-    </div>
+        <label>Username<img height='10px' width='10px' src='../Assets/required.png' /></label>
+        <input type="text" name="username" class="form-control" ng-model="user.username" ng-minlength="6" ng-maxlength="20">
 
-    <!-- Email: Required field, has to be validated -->
-    <div class="form-group" ng-class="{ 'has-error' : signUpForm.email.$invalid && !signUpForm.email.$pristine }">
+        <!-- Invalid input error message -->
+        <p ng-show="signUpForm.username.$error.minlength" class="help-block">Username is too short.</p>
+        <p ng-show="signUpForm.username.$error.maxlength" class="help-block">Username is too long.</p>
+      </div>
 
-      <label>Email<img height='10px' width='10px' src='../Assets/required.png' /></label>
-      <input type="email" name="email" class="form-control" ng-model="user.email" required>
+      <!-- Email: Required field, has to be validated -->
+      <div class="form-group" ng-class="{ 'has-error' : signUpForm.email.$invalid && !signUpForm.email.$pristine }">
 
-      <!-- Invalid input error message -->
-      <p ng-show="signUpForm.email.$invalid && !signUpForm.email.$pristine" class="help-block">Enter a valid email.</p>
-    </div>
+        <label>Email<img height='10px' width='10px' src='../Assets/required.png' /></label>
+        <input type="email" name="email" class="form-control" ng-model="user.email" required>
 
-    <!-- Password: Required field, has to be validated -->
-    <div class="form-group" ng-class="{ 'has-error' : signUpForm.password.$invalid && !signUpForm.password.$pristine }">
+        <!-- Invalid input error message -->
+        <p ng-show="signUpForm.email.$invalid && !signUpForm.email.$pristine" class="help-block">Enter a valid email.</p>
+      </div>
 
-      <label>Password <img height='10px' width='10px' src='../Assets/required.png' /></label>
-      <input type="password" name="password" class="form-control" ng-model="user.password" required>
+      <!-- Password: Required field, has to be validated -->
+      <div class="form-group" ng-class="{ 'has-error' : signUpForm.password.$invalid && !signUpForm.password.$pristine }">
 
-      <!-- Invalid input error message -->
-      <p ng-show="signUpForm.password.$invalid && !signUpForm.password.$pristine" class="help-block">Not a valid password</p>
-    </div>
+        <label>Password <img height='10px' width='10px' src='../Assets/required.png' /></label>
+        <input type="password" name="password" class="form-control" ng-model="user.password" required>
 
-    <button type="submit" class="btn btn-primary" ng-disabled="signUpForm.$invalid">Signup</button>
+        <!-- Invalid input error message -->
+        <p ng-show="signUpForm.password.$invalid && !signUpForm.password.$pristine" class="help-block">Not a valid password</p>
+      </div>
 
-  </form>  <!-- Closing Sign Up From Input Fields -->
+      <button type="submit" class="btn btn-primary" ng-disabled="signUpForm.$invalid">Sign Up</button>
+    </form>  <!-- Closing Sign Up From Input Fields -->
 
-  <br>
+    <br />
+    <p class ="col-md-offset-1 col-md-10">Already have an account? <a href="/#!/login">Log in</a></p>
 
-  <p>Already have an account? <a href="/#!/login">Login</a></p>
-
-</div>  <!-- Closing Bootstrap Grid div -->
+  </div>  <!-- Closing Bootstrap Grid div -->
+</div> <!-- Closing singUpView -->
