--- a/client/app/allApps/allApps.html
+++ b/client/app/allApps/allApps.html
@@ -1,13 +1,24 @@
   <!-- ALL APPLICATION VIEW using FormController, Display depends on ng-show showDiv -->
-  <div id="positions">
+  <div class="col-md-8 col-md-offset-2">
 
     <!-- ALL APPLICATION VIEW title -->
-    <h1 id="openApps">Open Applications</h1>
+    <div class="page-header"><h1>Open Applications</h1></div>
 
     <!-- Application Search -->
-    <div style="margin-left: 100px"  class="mdl-textfield mdl-js-textfield">Search:
-      <input id="field"  class="mdl-textfield__input" type="text" placeholder="Search Here" ng-model="searchText">
-    </div>
+
+    <form name='searchAllApps' class="form-group">
+      <label for ="searchAllApps">Search Open Applications</label>
+      <div class = "input-group">
+
+        <!-- Input Field / Search Bar  -->
+        <input
+          type='text',
+          name='searchAllAppsQuery',
+          ng-model='searchText',
+          class="form-control"/>
+
+      </div> <!-- Closing input-group -->
+    </form> <!-- Closing from group -->
 
     <!-- ng-repeat APPLICATIONS. It has 1) Open Position Card, 2) Add Stage Card -->
     <ul ng-repeat='result in results | filter:searchText track by $index' ng-model='application'>
